# esp-idf-japan-weather

./: CMakeLists.txt  Makefile  README.md  getpem.sh  partitions_example.csv
main/: CMakeLists.txt  Kconfig.projbuild  cmd.h  component.mk  fontx.c  fontx.h  ili9340.c  ili9340.h  ili9340_sjis.c  ili9340_sjis.h  m5stack.c  main.c
